# pneumonia_detection

./: .gitmodules  CMakeLists.txt  README.md
docs/: dissertation.odt  statistics.ods
docs/Assessment 1/: CMP3753M_WiPFormat.docx  EA1-Form-Deskbased_Library.docx  EA2-Form-Humans.docx
scripts/: get-dataset.sh  learn.sh  prep-dataset.sh  test-all.sh  test-one.sh  test.sh
src/: image.h  main.cpp
